--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@
          <li> Integracion continua: Madurez y Productividad en el Desarrollo de Software </li>
      </ul>
 </body>
+<p>Pie de Pagina</p>
 </html>
