Modificando titulo a ONE

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <cabeza>
      <meta charset = "UTF-8">
-     <title> Lista de Cursos de Alura Devops </title>
+     <title> Lista de Cursos de Alura ONE Devops </title>
 </head>
 <cuerpo>
      <ul>
