--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang = "en">
 <cabeza>
      <meta charset = "UTF-8">
-     <title> Lista de Cursos de Alura ONE Devops </title>
+     <title> Lista de algunos Cursos de Alura Devops </title>
+
 </head>
 <cuerpo>
      <ul>
