--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <cabeza>
      <meta charset = "UTF-8">
-     <title> Lista de algunos Cursillos de Alura Devops </title>
+     <title> Lista de algunos Cursos de Alura Devops </title>
 
 </head>
 <cuerpo>
