--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <cuerpo>
      <ul>
-         <li> Vagabundo </li>
+         <li> Vagabundo:</li>
          <li> Docker: Creando containers </li>
          <li> Ansible </li>
          <li> Integracion continua: Madurez y Productividad en el Desarrollo de Software </li>
